package Tool;

import javafx.application.Application;
import javafx.fxml.FXMLLoader;
import javafx.scene.Parent;
import javafx.scene.Scene;
import javafx.scene.image.Image;
import javafx.stage.Stage;

public class Main extends Application {
    @Override
    public void start(Stage primaryStage) throws Exception{
        Parent root = FXMLLoader.load(getClass().getResource("Main.fxml"));
        primaryStage.getIcons().add(new Image("ico.png"));
        primaryStage.setTitle("Residue Number System Tool");
        primaryStage.setScene(new Scene(root, 456, 358));
        primaryStage.show();
    }

    public static void main(String[] args) {
        launch(args);
    }
}