@startuml

title __TOOL's Class Diagram__\n

  package Tool {
    class Controller {
        - resources : ResourceBundle
        - location : URL
        ~ aboutProgramMenuItem : MenuItem
        ~ saveMenuItem : MenuItem
        ~ saveAsMenuItem : MenuItem
        - sliderLabel : Label
        - slider : Slider
        - nSpinner : Spinner<Integer>
        - modSystemTextField : TextField
        - maxValueModSystemTextField : TextField
        - expressionTextField : TextField
        - resultRNSTextField : TextField
        - resultPNSTextField : TextField
        - numberPNSTextField : TextField
        - resultPNSToRNSTextField : TextField
        - numberRNSTextField : TextField
        - resultRNSToPNSTextField : TextField
        - resultTextArea : TextArea
        - goButton : Button
        - countOfRuns : int
        ~ initialize()
        - generateModSystem()
        - textChange()
        - addInfoToResults()
        ~ goButton_onAction()
        ~ aboutProgramMenuItem_onAction()
        ~ saveAsMenuItem_onAction()
    }
  }
  

  package Tool {
    class Main {
        + start()
        {static} + main()
    }
  }
  

  abstract class Parameters {
      + Parameters()
      {abstract} + getRaw()
      {abstract} + getUnnamed()
      {abstract} + getNamed()
  }
  

  Controller o-- ModSystem : modSystem
  Main -up-|> Application
  Main +-down- Parameters


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
